--- a/css/stayle.css
+++ b/css/stayle.css
@@ -40,10 +40,13 @@
    }
    .register{
     opacity: -1;
+    z-index: -10;
    }
    .register-view{
     opacity: 1;
+    z-index: 10;
    }
    .duration{
-    transition: 0.3s;
+    transition: 0.2s;
    }
+
