--- a/css/stayle.css
+++ b/css/stayle.css
@@ -50,3 +50,11 @@
     transition: 0.2s;
    }
 
+    .searching-close{
+        transform: translateX(2000%);
+    }
+    .wow{
+        display: flex;
+        align-items: center;
+        gap: 7px;
+    }
